add new field to get full product
